--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
-    "sentiment": "^5.0.2"
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-reddit": "^1.1.0",
+    "passport-twitter": "^1.0.4",
+    "sentiment": "^5.0.2",
+    "vader-sentiment": "^1.1.3"
   }
 }
